--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "predis/predis": "^2.2",
+        "robinncode/db_craft": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
