office env updated

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
     },
     "require": {
         "php": "^8.2",
+        "ext-redis": "*",
         "codeigniter4/framework": "^4.0",
         "robinncode/db_craft": "^1.2",
-        "ext-redis": "*"
+        "zircote/swagger-php": "^4.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
